# ils-specs

./: .editorconfig  .gitignore  .markdownlint.json  .mdformat.toml  AGENTS.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.claude/agents/: spec-auditor-rules.md  spec-auditor.md
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  deploy-pages.yml
docs/superpowers/plans/: 2026-03-13-framework-refactor-and-report-guide.md  2026-03-15-spec-consistency-audit-and-agent.md  2026-03-16-contributing-guides.md
docs/superpowers/specs/: 2026-03-13-framework-refactor-and-report-guide-design.md  2026-03-15-spec-consistency-audit-and-agent-design.md  2026-03-16-contributing-guides-design.md
overrides/: main.html
scripts/: format-specs.sh  validate-specs.py
specs/: FRAMEWORK.md  README.md  glossary.md  schema.yaml
specs/code-tables/: item-types.md  location-codes.md
specs/contributing/: contributing-guide.md  maintainer-guide.md
specs/guides/: code-table-guide.md  report-guide.md
specs/reports/: slitemdata.md
